Modified WS class hierarchy on registration
 SVN 5440@trunk

--- a/lcl/widgetset/README
+++ b/lcl/widgetset/README
@@ -8,51 +8,56 @@ IMPORTANT
 
 Derivation and inheritance of classes is different then one
 might be used to. It wil be explained by the following 
-example.
+examples.
 
 Suppose the following LCL class hierarchy:
 
  TLCLComponent
      |
-     v     
   TControl
      |
-     v     
  TWinControl
  
 the corresponding WS skeleton would be
 
  TWSLCLComponent
       |
-      v     
   TWSControl
       |
-      v     
  TWSWinControl
 
 
 When method X of TWSControl gets implemented by 
 widgetset Q the hierarchy looks like
 
-
  TWSLCLComponent
       |
-      v     
-  TWSControl --> TQWSControl.X
+  TWSControl.X --> TQWSControl.X
       |
-      v     
  TWSWinControl
 
 
-When the same method X is required in TWSWinControl
-inheritance doesnt work since TWSWinControl.X calls
-TWSControl.X
-The following can be done to get around this:
-*) try to move the LCL functionality to the lowest 
-   class
-*) Implement TQWSWinControl.X by simply calling
-   TQWSControl.X
-*) Implement the functionality of TQWSControl.X
-   in the TQWidgetSet and call it from both    
-   TQWSControl.X and TQWSWinControl.X
+Calling TWSWinControl.X doesn't call TQWSControl.X since
+it's parent is TWSControl. This problem is solved by 
+modifying the class hierarchy at runtime.
+When a ComponentClass is registered by RegisterWSComponent,
+the class is copied and the vmt entries are adjusted so 
+that the hierarchy looks like:
+
+
+ TWSLCLComponent
+      |
+  TWSControl.X --> TQWSControl.X
+                        |
+                   TWSWinControl
+
+In this case, calling TWSWinControl.X will call the overriden 
+TQWSControl.X. The only thing which doesn't get handled is the 
+inherited statement. Suppose there is also a TQWSWinControl.X 
+which implements a few extra steps. In a normal situation one 
+would have called "inherited". The call to inherited is
+resolved at compiletime and would in this example to a call to
+TWSControl.X. That is not what we want.
+To get around this, call the parent yourself:
+  TWSWinControlClass(ClassParent).X
 
